--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-simple-keyboard": "^3.5.64"
+    "react-simple-keyboard": "^3.5.64",
+    "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
